buscar repositorios, ver perfil, hooks

--- a/search_users/src/components/pages/usuarios/home.scss
+++ b/search_users/src/components/pages/usuarios/home.scss
@@ -1,8 +1,12 @@
-.imagenGithub{
-    width: 125px;
-    height: 125px;
+@media (max-width: 1000px) {
+    #title{
+        font-size: 25px !important;
+    }
+
 
 }
+
+
 
 .container{
     margin-top: 35px;
